--- a/Practice API/styles.css
+++ b/Practice API/styles.css
@@ -80,6 +80,14 @@ h1 {
     font-size: 14px;
 }
 
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    gap: 20px;
+    height: 20px;
+}
+
 @media (max-width: 1200px) {
     .user-container {
         grid-template-columns: repeat(3, 1fr);
